Ultralord/build/tmp/compileFrcUserProgramReleaseExecutableFrcUserProgramCpp/output.txt
See file:///C:/Users/rlind/Documents/ProgramsFolder/Ultralord/Ultralord/build/tmp/compileFrcUserProgramReleaseExecutableFrcUserProgramCpp/output.txt for all output for compileFrcUserProgramReleaseExecutableFrcUserProgramCpp.
compiling sparkDrive.cpp successful.
In file included from C:\Users\rlind\Documents\ProgramsFolder\Ultralord\Ultralord\src\main\cpp\sparkDrive.cpp:1:0:
C:\Users\rlind\Documents\ProgramsFolder\Ultralord\Ultralord\src\main\include/SparkDrive.h: In constructor 'SparkDrive::SparkDrive(rev::CANSparkMax*, rev::CANSparkMax*, rev::CANSparkMax*, rev::CANSparkMax*)':
C:\Users\rlind\Documents\ProgramsFolder\Ultralord\Ultralord\src\main\include/SparkDrive.h:20:27: warning: 'SparkDrive::rFrontPID' will be initialized after [-Wreorder]
     rev::CANPIDController rFrontPID;
                           ^~~~~~~~~
C:\Users\rlind\Documents\ProgramsFolder\Ultralord\Ultralord\src\main\include/SparkDrive.h:19:27: warning:   'rev::CANPIDController SparkDrive::lBackPID' [-Wreorder]
     rev::CANPIDController lBackPID;
                           ^~~~~~~~
C:\Users\rlind\Documents\ProgramsFolder\Ultralord\Ultralord\src\main\cpp\sparkDrive.cpp:4:1: warning:   when initialized here [-Wreorder]
 SparkDrive::SparkDrive(rev::CANSparkMax *lFront_in, rev::CANSparkMax *lBack_in, rev::CANSparkMax *rFront_in, rev::CANSparkMax *rBack_in)
 ^~~~~~~~~~

compiling Ultra.cpp successful.
In file included from C:\Users\rlind\Documents\ProgramsFolder\Ultralord\Ultralord\src\main\include/Ultra.h:3:0,
                 from C:\Users\rlind\Documents\ProgramsFolder\Ultralord\Ultralord\src\main\cpp\Ultra.cpp:1:
C:\Users\rlind\.gradle\caches\transforms-2\files-2.1\77aec02c88b6cdbbe6ae1baa0d102dbc\wpilibc-cpp-2020.1.2-headers/frc/WPILib.h:14:2: warning: #warning is a GCC extension
 #warning "Including this header drastically increases compilation times and is bad style. Include only what you use instead."
  ^~~~~~~
C:\Users\rlind\.gradle\caches\transforms-2\files-2.1\77aec02c88b6cdbbe6ae1baa0d102dbc\wpilibc-cpp-2020.1.2-headers/frc/WPILib.h:14:2: warning: #warning "Including this header drastically increases compilation times and is bad style. Include only what you use instead." [-Wcpp]

compiling Robot.cpp failed.
In file included from C:\Users\rlind\Documents\ProgramsFolder\Ultralord\Ultralord\src\main\include/Robot.h:5:0,
                 from C:\Users\rlind\Documents\ProgramsFolder\Ultralord\Ultralord\src\main\cpp\Robot.cpp:1:
C:\Users\rlind\.gradle\caches\transforms-2\files-2.1\77aec02c88b6cdbbe6ae1baa0d102dbc\wpilibc-cpp-2020.1.2-headers/frc/WPILib.h:14:2: warning: #warning is a GCC extension
 #warning "Including this header drastically increases compilation times and is bad style. Include only what you use instead."
  ^~~~~~~
C:\Users\rlind\.gradle\caches\transforms-2\files-2.1\77aec02c88b6cdbbe6ae1baa0d102dbc\wpilibc-cpp-2020.1.2-headers/frc/WPILib.h:14:2: warning: #warning "Including this header drastically increases compilation times and is bad style. Include only what you use instead." [-Wcpp]
C:\Users\rlind\Documents\ProgramsFolder\Ultralord\Ultralord\src\main\cpp\Robot.cpp: In member function 'virtual void Robot::TeleopPeriodic()':
C:\Users\rlind\Documents\ProgramsFolder\Ultralord\Ultralord\src\main\cpp\Robot.cpp:62:3: error: 'SmartDashboard' has not been declared
   SmartDashboard::PutNumber("Ultra Distance",ultra->DistanceToWall());
   ^~~~~~~~~~~~~~

Finished compileFrcUserProgramReleaseExecutableFrcUserProgramCpp, see full log file:///C:/Users/rlind/Documents/ProgramsFolder/Ultralord/Ultralord/build/tmp/compileFrcUserProgramReleaseExecutableFrcUserProgramCpp/output.txt.
